Refactored loaded elements model